--- a/advanced-achievements-plugin/src/main/resources/plugin.yml
+++ b/advanced-achievements-plugin/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: AdvancedAchievements
 main: com.hm.achievement.AdvancedAchievements
 version: ${revision}
 author: DarkPyves
-softdepend: [ CMI,Essentials,Jobs,PetMaster,PlaceholderAPI,Vault ]
+softdepend: [ CMI,Essentials,Jobs,PetMaster,PlaceholderAPI,Vault,Craftconomy3 ]
 description: Advanced Achievements enables unique and challenging achievements. Try to collect as many as you can, earn rewards, climb the rankings and receive RP books!
 website: https://github.com/PyvesB/advanced-achievements
 api-version: 1.13
